[package]
name = "fly-proxy-challenge"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "crates/config","crates/estate", "crates/state", "crates/tcp-service"]

[workspace.dependencies]
eyre = "0.6.12"
rand = "0.9.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = [ "full" ] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dependencies]
config = { path = "crates/config" }
eyre.workspace = true
state = { path = "crates/state" }
tcp-service = { path = "crates/tcp-service" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
